[gd_scene load_steps=7 format=3 uid="uid://cby2b74eg2b68"]

[ext_resource type="Script" uid="uid://dy7b8hqvaec41" path="res://Game/Scripts/combat.gd" id="1_k3o1r"]
[ext_resource type="Texture2D" uid="uid://duu7mborj7y13" path="res://HUD/Assets/desert-bg.png" id="2_35xpc"]
[ext_resource type="Texture2D" uid="uid://oivhesjvwi0b" path="res://HUD/Assets/black-strip.png" id="3_1je8c"]
[ext_resource type="PackedScene" uid="uid://b8hphdbgemuei" path="res://Game/arena.tscn" id="4_v4s5l"]
[ext_resource type="Texture2D" uid="uid://bl7wfr014n4ly" path="res://HUD/Assets/action_ninepatchrect.png" id="5_hmuqx"]
[ext_resource type="Texture2D" uid="uid://vgb5sxthsbly" path="res://HUD/Assets/arrow-right.png" id="6_nayhm"]

[node name="Combat" type="CanvasLayer"]
script = ExtResource("1_k3o1r")

[node name="BackgroundContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_35xpc")

[node name="BlackStrip" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_1je8c")

[node name="HUD" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="InfoContainer" type="MarginContainer" parent="HUD"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.17

[node name="InfoLabel" type="Label" parent="HUD/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "lorem ipsum"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ArenaContainer" type="MarginContainer" parent="HUD"]
layout_mode = 2
size_flags_vertical = 3

[node name="Arena" parent="HUD/ArenaContainer" instance=ExtResource("4_v4s5l")]
unique_name_in_owner = true

[node name="ActionContainer" type="MarginContainer" parent="HUD"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.37

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/ActionContainer"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="MonstersList" type="NinePatchRect" parent="HUD/ActionContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
texture = ExtResource("5_hmuqx")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="HUD/ActionContainer/HBoxContainer/MonstersList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MonsterListContainer" type="VBoxContainer" parent="HUD/ActionContainer/HBoxContainer/MonstersList/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ActionList" type="NinePatchRect" parent="HUD/ActionContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
texture = ExtResource("5_hmuqx")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="HUD/ActionContainer/HBoxContainer/ActionList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/ActionContainer/HBoxContainer/ActionList/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/ActionContainer/HBoxContainer/ActionList/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/ActionContainer/HBoxContainer/ActionList/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ActionTextureButton" type="TextureButton" parent="HUD/ActionContainer/HBoxContainer/ActionList/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("6_nayhm")
stretch_mode = 3

[node name="ActionLabel" type="Label" parent="HUD/ActionContainer/HBoxContainer/ActionList/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Action"

[node name="MarginContainer2" type="MarginContainer" parent="HUD/ActionContainer/HBoxContainer/ActionList/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/ActionContainer/HBoxContainer/ActionList/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ItemsTextureButton" type="TextureButton" parent="HUD/ActionContainer/HBoxContainer/ActionList/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("6_nayhm")
stretch_mode = 3

[node name="ItemsLabel" type="Label" parent="HUD/ActionContainer/HBoxContainer/ActionList/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Items"

[node name="MarginContainer3" type="MarginContainer" parent="HUD/ActionContainer/HBoxContainer/ActionList/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/ActionContainer/HBoxContainer/ActionList/MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RunTextureButton" type="TextureButton" parent="HUD/ActionContainer/HBoxContainer/ActionList/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("6_nayhm")
stretch_mode = 3

[node name="RunLabel" type="Label" parent="HUD/ActionContainer/HBoxContainer/ActionList/MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Run"

[node name="ActionInfoList" type="NinePatchRect" parent="HUD/ActionContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_hmuqx")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="HeroList" type="MarginContainer" parent="HUD/ActionContainer/HBoxContainer/ActionInfoList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HeroListContainer" type="VBoxContainer" parent="HUD/ActionContainer/HBoxContainer/ActionInfoList/HeroList"]
unique_name_in_owner = true
layout_mode = 2

[node name="HeroActionList" type="MarginContainer" parent="HUD/ActionContainer/HBoxContainer/ActionInfoList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/ActionContainer/HBoxContainer/ActionInfoList/HeroActionList"]
layout_mode = 2

[node name="ItemList" type="MarginContainer" parent="HUD/ActionContainer/HBoxContainer/ActionInfoList"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/ActionContainer/HBoxContainer/ActionInfoList/ItemList"]
layout_mode = 2
